--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body {
+  font-size: 15px;
+  font-family: "Josefin Sans", sans-serif;
+  font-style: normal;
+}
